2004-08-09  Richard Hult  <richard@imendio.com>

	* libplanner/Makefile.am: Remove mrp-intl.h
	* libplanner/*.c: Change mrp-intl.h to glib/gi18n.h.
	* src/*.c: Change libgnome/gnome-i18n.h to glib/gi18n.h.

2004-08-09  Richard Hult  <richard@imendio.com>

	* configure.in:
	* libplanner/mrp-file-module.c: (mrp_file_module_load_all),
	(mrp_file_reader_read_string):
	* libplanner/mrp-file-module.h:
	* libplanner/mrp-mpx.c: (init):
	* libplanner/mrp-project.c: (mrp_project_load):
	* libplanner/mrp-xml.c: (init): Remove gsf usage since we didn't
	really use it for anything but opening an XML file and returning a
	doc pointer.

	* libplanner/mrp-error.h: Include glib.h.

2004-08-09  Mikael Hallendal  <micke@imendio.com>

	* src/planner-sql-plugin.c: Update to new PlannerConf api.

2004-08-09  Mikael Hallendal  <micke@imendio.com>

	* src/Makefile.am: Added planner-conf.h and planner-conf-gconf.c
	* src/planner-conf-gconf.c: Added
	* src/planner-conf.h: Added
	* src/planner-application.[ch]:
	* src/planner-gantt-chart.c:
	* src/planner-print-dialog.c:
	* src/planner-sql-plugin.c:
	* src/planner-task-view.c: 
	* src/planner-window.c: 
	* src/planner-xml-planner-plugin.c:
	- Added GConf abstraction layer.
	- Updated all places to use the GConf abstraction layer

2004-08-06  Richard Hult  <richard@imendio.com>

	* src/planner-window.c: Break some really long lines.
	(window_populate): Add tooltip to the view radio items.

	* src/planner-ttable-view.c (ttable_view_ttable_status_updated):
	Set status message.

	* src/Makefile.am: Fix libutil linkage.

	* src/planner-gantt-view.c: (gantt_view_gantt_status_updated_cb): 
	* src/planner-window.c: (window_add_widget), (window_populate),
	(window_view_selected), (window_restore_state),
	(planner_window_set_status), (window_menu_item_select_cb),
	(window_menu_item_deselect_cb), (window_disconnect_proxy_cb),
	(window_connect_proxy_cb): Add status bar and use it for status
	messages.

	* src/planner-sql-plugin.c: